fix (HSK-456) fix vertical adjustment of modal elements on mobile safari

--- a/source/_patterns/01-molecules/10-checkout/03-checkout-step-footer.scss
+++ b/source/_patterns/01-molecules/10-checkout/03-checkout-step-footer.scss
@@ -41,9 +41,12 @@
       position : absolute;
       top : 50%;
       left : 0;
-      margin-top: -.075em;
       transform: translateY(-50%);
       vertical-align: middle;
+      margin-top: -2px;
+      @media only screen and (min-width: $breakpointTablet) {
+        margin-top: -1px;
+      }
     }
     .icon--chevron {
       display : none;
